NXP-10866: fix selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
@@ -254,7 +254,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -339,7 +339,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
