--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/dateRangeSearch.html
@@ -82,7 +82,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -102,7 +102,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -142,7 +142,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -162,7 +162,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -192,7 +192,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
