--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -97,7 +97,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
