--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
@@ -77,7 +77,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -112,7 +112,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Go »&quot;]</td>
+	<td>//input[@value=&quot;Filter&quot;]</td>
 	<td></td>
 </tr>
 <tr>
