--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -77,7 +77,7 @@
 </tr>
 <tr>
   <td>clickAndWait</td>
-  <td>//input[@value=&quot;Go »&quot;]</td>
+  <td>//input[@value=&quot;Filter&quot;]</td>
   <td></td>
 </tr>
 <tr>
