NXP-11209: Remove specific styles defined in CAP, add the compactLayout class to get the faceted search widgets display, update label and layout

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_form.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_form.xhtml
@@ -5,7 +5,7 @@
   xmlns:f="http://java.sun.com/jsf/core"
   xmlns:nxl="http://nuxeo.org/nxforms/layout">
 
-<h:form id="facetedSearchForm">
+<h:form id="facetedSearchForm" class="compactLayout">
 
   <nxu:set var="contentViewName"
     value="#{facetedSearchActions.currentContentViewName}">
