NXP-11138: adapt tests to selection button changes

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -215,7 +215,7 @@
 </tr>
 <tr>
   <td>waitForEditable</td>
-  <td>//span[@id=&quot;CURRENT_SELECTION_TRASH&quot;]/input</td>
+  <td>id=document_content_buttons:nxw_cvButton_CURRENT_SELECTION_TRASH_form:nxw_cvButton_CURRENT_SELECTION_TRASH</td>
   <td>12000</td>
 </tr>
 <tr>
@@ -245,7 +245,7 @@
 </tr>
 <tr>
   <td>waitForEditable</td>
-  <td>//span[@id=&quot;CURRENT_SELECTION_DELETE&quot;]/input</td>
+  <td>id=document_trash_content_buttons:nxw_cvButton_CURRENT_SELECTION_DELETE_form:nxw_cvButton_CURRENT_SELECTION_DELETE</td>
   <td>12000</td>
 </tr>
 <tr>
