--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/tearDown.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/tearDown.html
@@ -16,44 +16,44 @@
   </thead>
   <tbody>
 <tr>
-	<td>setTimeout</td>
-	<td>120000</td>
-	<td></td>
+  <td>setTimeout</td>
+  <td>120000</td>
+  <td></td>
 </tr>
 <tr>
-	<td>open</td>
-	<td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium<br /> tearDown</td>
-	<td></td>
+  <td>open</td>
+  <td>restAPI/systemLog?token=dolog&amp;level=INFO&amp;message=----- Selenium<br /> tearDown</td>
+  <td></td>
 </tr>
 <tr>
-	<td>open</td>
-	<td>logout</td>
-	<td></td>
+  <td>open</td>
+  <td>logout</td>
+  <td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>username</td>
-	<td>Administrator</td>
+  <td>type</td>
+  <td>username</td>
+  <td>Administrator</td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>password</td>
-	<td>Administrator</td>
+  <td>type</td>
+  <td>password</td>
+  <td>Administrator</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>Submit</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>Submit</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Administrator</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>Administrator</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Workspaces</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Workspaces</td>
+  <td></td>
 </tr>
 <tr>
   <td>click</td>
@@ -62,7 +62,7 @@
 </tr>
 <tr>
   <td>waitForEditable</td>
-  <td>//span[@id=&quot;CURRENT_SELECTION_TRASH&quot;]/input</td>
+  <td>id=document_content_buttons:nxw_cvButton_CURRENT_SELECTION_TRASH_form:nxw_cvButton_CURRENT_SELECTION_TRASH</td>
   <td>12000</td>
 </tr>
 <tr>
@@ -92,7 +92,7 @@
 </tr>
 <tr>
   <td>waitForEditable</td>
-  <td>//span[@id=&quot;CURRENT_SELECTION_DELETE&quot;]/input</td>
+  <td>id=document_trash_content_buttons:nxw_cvButton_CURRENT_SELECTION_DELETE_form:nxw_cvButton_CURRENT_SELECTION_DELETE</td>
   <td>12000</td>
 </tr>
 <tr>
