NXP-11057: follow changes on labels for tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -138,7 +138,7 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Saved searches</td>
+  <td>Your searches</td>
   <td></td>
 </tr>
 <!-- load the search -->
@@ -175,7 +175,7 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Saved searches</td>
+  <td>Your searches</td>
   <td></td>
 </tr>
 <tr>
