NXP-11057: follow changes in selenium tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -137,9 +137,14 @@
   <td></td>
 </tr>
 <tr>
-  <td>verifyTextPresent</td>
-  <td>Your searches</td>
+  <td>verifyElementPresent</td>
+  <td>//select[@id='facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]</td>
   <td></td>
+</tr>
+<tr>
+  <td>verifyAttribute</td>
+  <td>//select[@id='facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]@label</td>
+  <td>Your searches</td>
 </tr>
 <!-- load the search -->
 <tr>
@@ -174,9 +179,14 @@
   <td></td>
 </tr>
 <tr>
-  <td>verifyTextPresent</td>
-  <td>Your searches</td>
+  <td>verifyElementPresent</td>
+  <td>//select[@id='facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]</td>
   <td></td>
+</tr>
+<tr>
+  <td>verifyAttribute</td>
+  <td>//select[@id='facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]@label</td>
+  <td>Your searches</td>
 </tr>
 <tr>
   <td>selectAndWait</td>
