NXP-4760: follow changes on widget ids

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -82,7 +82,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_1_suggest</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_suggest</td>
 	<td>Adm</td>
 </tr>
 <tr>
@@ -92,7 +92,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=id('facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_1_suggestionBox:suggest')/x:tbody[1]/x:tr[1]/x:td[2]</td>
+	<td>xpath=id('facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_suggestionBox:suggest')/x:tbody[1]/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
