--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
@@ -204,7 +204,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//a[@id='nxw_dc_coverage_1_openPopup']</td>
+	<td>//a[@id='nxw_dc_coverage_openPopup']</td>
 	<td></td>
 </tr>
 <tr>
@@ -224,7 +224,7 @@
 </tr>
 <tr>
 	<td>click</td>
-        <td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_coverage_1_treeId:nxw__dc__coverage__1__recursiveTreeNodesAdaptorId:3::nxw_dc_coverage_1_treeNodeId:handle:img:collapsed</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_coverage_treeId:nxw__dc__coverage__recursiveTreeNodesAdaptorId:3::nxw_dc_coverage_treeNodeId:handle:img:collapsed</td>
 	<td></td>
 </tr>
 <tr>
@@ -289,7 +289,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//a[@id='nxw_dc_subjects_1_openPopup']</td>
+	<td>id=nxw_dc_subjects_openPopup</td>
 	<td></td>
 </tr>
 <tr>
@@ -309,7 +309,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_dc_subjects_1_treeId:nxw__dc__subjects__1__recursiveTreeNodesAdaptorId:0::nxw_dc_subjects_1_treeNodeId:handle:img:collapsed</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_subjects_treeId:nxw__dc__subjects__recursiveTreeNodesAdaptorId:0::nxw_dc_subjects_treeNodeId:handle:img:collapsed</td>
 	<td></td>
 </tr>
 <tr>
