--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/pathSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/pathSearch.html
@@ -77,7 +77,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//a[@id='nxw_ecm_path_1_openPopup']</td>
+	<td>//a[@id='nxw_ecm_path_openPopup']</td>
 	<td></td>
 </tr>
 <tr>
@@ -97,7 +97,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>facetedSearchForm:nxl_faceted_search_default:nxw_ecm_path_1_treeId:nxw__ecm__path__1__recursiveTreeNodesAdaptorId:0:nxw__ecm__path__1__recursiveTreeNodesAdaptorId:2::nxw_ecm_path_1_treeNodeId:handle:img:collapsed</td>
+	<td>facetedSearchForm:nxl_faceted_search_default:nxw_ecm_path_treeId:nxw__ecm__path__recursiveTreeNodesAdaptorId:0:nxw__ecm__path__recursiveTreeNodesAdaptorId:2::nxw_ecm_path_treeNodeId:handle:img:collapsed</td>
 	<td></td>
 </tr>
 <tr>
