--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext_1</td>
+	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_ecm_fulltext</td>
 	<td>Klaatu</td>
 </tr>
 <tr>
