NXP-11059: migrate faceted search to use the new Save search box.
List the saved searches in the user Home.

Allow the user to migrate old saved searches to be able to list them in the Home.

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_form.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_form.xhtml
@@ -3,9 +3,15 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:c="http://java.sun.com/jstl/core"
   xmlns:f="http://java.sun.com/jsf/core"
-  xmlns:nxl="http://nuxeo.org/nxforms/layout">
+  xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
+  xmlns:nxl="http://nuxeo.org/nxforms/layout"
+  class="compactLayout">
 
-<h:form id="facetedSearchForm" class="compactLayout">
+  <h:form id="facetedSearchSaveForm">
+    <nxl:widget name="facetedSaveSearch" mode="view" />
+  </h:form>
+
+<h:form id="facetedSearchForm" >
 
   <nxu:set var="contentViewName"
     value="#{facetedSearchActions.currentContentViewName}">
