NXP-11059: update tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -225,7 +225,7 @@
 </tr>
 <tr>
   <td>waitForEditable</td>
-  <td>id=faceted_saved_search_buttons:nxw_cvButton_CURRENT_SELECTION_TRASH_form:nxw_cvButton_CURRENT_SELECTION_TRASH</td>
+  <td>id=dam_saved_search_buttons:nxw_cvButton_damCurrentSelectionDelete_form:nxw_cvButton_damCurrentSelectionDelete</td>
   <td>12000</td>
 </tr>
 <tr>
@@ -235,7 +235,7 @@
 </tr>
 <tr>
   <td>assertConfirmation</td>
-  <td>Delete selected document(s)?</td>
+  <td>Permanently delete selected document(s)?</td>
   <td></td>
 </tr>
 <tr>
