--- a/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/incl/faceted_saved_searches.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/incl/faceted_saved_searches.xhtml
@@ -21,7 +21,7 @@
     </div>
   </c:if>
 
-  <nxu:set var="contentViewName" value="faceted_saved_search">
+  <nxu:set var="contentViewName" value="faceted_saved_searches">
     <ui:decorate template="/incl/content_view.xhtml" />
   </nxu:set>
 
