NXP-11472: remove duplicate 'layout' attribute

--- a/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_search_contentView_selection_widget_template.xhtml
+++ b/nuxeo-platform-faceted-search-jsf/src/main/resources/web/nuxeo.war/widgets/faceted_search_contentView_selection_widget_template.xhtml
@@ -9,7 +9,7 @@
 
 <a4j:region renderRegionOnly="true">
 
-    <a4j:outputPanel layout="block" id="#{widget.id}_panel" layout="block">
+    <a4j:outputPanel id="#{widget.id}_panel" layout="block">
       <table class="listShuttleTable">
         <tbody>
           <tr>
