NXP-10590: update tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -138,18 +138,18 @@
 </tr>
 <tr>
   <td>verifyElementPresent</td>
-  <td>//select[@id='facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]</td>
+  <td>//select[@id='facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]</td>
   <td></td>
 </tr>
 <tr>
   <td>verifyAttribute</td>
-  <td>//select[@id='facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]@label</td>
+  <td>//select[@id='facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]@label</td>
   <td>Your searches</td>
 </tr>
 <!-- load the search -->
 <tr>
   <td>selectAndWait</td>
-  <td>id=facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector</td>
+  <td>id=facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector</td>
   <td>label=My search</td>
 </tr>
 <tr>
@@ -180,22 +180,22 @@
 </tr>
 <tr>
   <td>verifyElementPresent</td>
-  <td>//select[@id='facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]</td>
+  <td>//select[@id='facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]</td>
   <td></td>
 </tr>
 <tr>
   <td>verifyAttribute</td>
-  <td>//select[@id='facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]@label</td>
+  <td>//select[@id='facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]@label</td>
   <td>Your searches</td>
 </tr>
 <tr>
   <td>selectAndWait</td>
-  <td>id=facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector</td>
+  <td>id=facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector</td>
   <td>None</td>
 </tr>
 <tr>
   <td>selectAndWait</td>
-  <td>id=facetedSearchForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector</td>
+  <td>id=facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector</td>
   <td>My search</td>
 </tr>
 <tr>
