NXP-11798: update tests

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/fullTextSearch.html
@@ -82,7 +82,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Default Faceted Search</td>
+	<td>Default search</td>
 	<td></td>
 </tr>
 <tr>
@@ -117,7 +117,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Default Faceted Search</td>
+	<td>Default search</td>
 	<td></td>
 </tr>
 <tr>
