--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/saveSearch.html
@@ -82,7 +82,7 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>Default Faceted Search</td>
+  <td>Default search</td>
   <td></td>
 </tr>
 <tr>
@@ -144,7 +144,7 @@
 <tr>
   <td>verifyAttribute</td>
   <td>//select[@id='facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]@label</td>
-  <td>Your searches</td>
+  <td>Saved searches</td>
 </tr>
 <!-- load the search -->
 <tr>
@@ -186,7 +186,7 @@
 <tr>
   <td>verifyAttribute</td>
   <td>//select[@id='facetedSearchSelectorForm:nxl_faceted_search_default_selectors:allSavedFacetedSearchSelector']/optgroup[1]@label</td>
-  <td>Your searches</td>
+  <td>Saved searches</td>
 </tr>
 <tr>
   <td>selectAndWait</td>
