--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/searchPermlink.html
@@ -88,7 +88,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Default Faceted Search</td>
+	<td>Default search</td>
 	<td></td>
 </tr>
 <tr>
@@ -123,7 +123,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Default Faceted Search</td>
+	<td>Default search</td>
 	<td></td>
 </tr>
 <tr>
