--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/categorizationSearch.html
@@ -259,7 +259,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Default Faceted Search</td>
+	<td>Default search</td>
 	<td></td>
 </tr>
 <tr>
@@ -344,7 +344,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Default Faceted Search</td>
+	<td>Default search</td>
 	<td></td>
 </tr>
 <tr>
