--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -75,26 +75,34 @@
 	<td>Author</td>
 	<td></td>
 </tr>
+<!-- Since 5.7.3 creator search is a select2 widget-->
 <tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
+    <td>clickAt</td>
+    <td>css=div[id$='nxw_dc_creator_select2'] input</td>
+    <td></td>
+</tr>
+<!-- The 2 following instructions are a workaround to make select2 display suggestions. Only the second typeKeys call triggers the suggestion display!!! -->
+<tr>
+    <td>typeKeys</td>
+    <td>id=s2id_autogen1</td>
+    <td>Adm</td>
 </tr>
 <tr>
-	<td>typeKeys</td>
-	<td>id=facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_suggest</td>
-	<td>Adm</td>
+    <td>typeKeys</td>
+    <td>id=s2id_autogen1</td>
+    <td>Adm</td>
 </tr>
 <tr>
-	<td>waitForA4jRequest</td>
-	<td>2000</td>
-	<td></td>
+    <td>waitForElementPresent</td>
+    <td>css=.select2-result-label:contains('Administrator')</td>
+    <td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>xpath=id('facetedSearchForm:nxl_faceted_search_default:nxw_dc_creator_suggestionBox:suggest')/x:tbody[1]/x:tr[1]/x:td[2]</td>
-	<td></td>
+    <td>clickAt</td>
+    <td>css=.select2-result-label:contains('Administrator')</td>
+    <td></td>
 </tr>
+<!--  -->
 <tr>
 	<td>clickAndWait</td>
 	<td>//input[@value=&quot;Filter&quot;]</td>
