--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
@@ -8,6 +8,7 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
+<tr><td><a href="checkBrowserVersion.html">checkBrowserVersion</a></td></tr>
 <tr><td><a href="setUp.html">setUp</a></td></tr>
 <tr><td><a href="fullTextSearch.html">fullTextSearch</a></td></tr>
 <tr><td><a href="dateRangeSearch.html">dateRangeSearch</a></td></tr>
