NXP-12266: use fixed id for creator in selenium test

--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/authorSearch.html
@@ -84,12 +84,12 @@
 <!-- The 2 following instructions are a workaround to make select2 display suggestions. Only the second typeKeys call triggers the suggestion display!!! -->
 <tr>
     <td>typeKeys</td>
-    <td>id=s2id_autogen1</td>
+    <td>css=div[id$='nxw_dc_creator_select2'] input</td>
     <td>Adm</td>
 </tr>
 <tr>
     <td>typeKeys</td>
-    <td>id=s2id_autogen1</td>
+    <td>css=div[id$='nxw_dc_creator_select2'] input</td>
     <td>Adm</td>
 </tr>
 <tr>
