--- a/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-faceted-search-ftest/selenium/tests/suite.html
@@ -15,7 +15,10 @@
 <tr><td><a href="saveSearch.html">saveSearch</a></td></tr>
 <tr><td><a href="authorSearch.html">authorSearch</a></td></tr>
 <tr><td><a href="categorizationSearch.html">categorizationSearch</a></td></tr>
+<!-- NXP-15184: to re-enable when fixed -->
+<!--
 <tr><td><a href="pathSearch.html">pathSearch</a></td></tr>
+-->
 <tr><td><a href="searchPermlink.html">searchPermlink</a></td></tr>
 <tr><td><a href="tearDown.html">tearDown</a></td></tr>
 </tbody></table>
