NXP-15226: Add missing mainNoTabs class

--- a/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_results.xhtml
+++ b/nuxeo-platform-faceted-search-dm/src/main/resources/web/nuxeo.war/facetedsearch/faceted_search_results.xhtml
@@ -13,7 +13,7 @@
 
     <ui:include src="/incl/message_banner.xhtml" />
 
-    <div id="content">
+    <div id="content" class="mainNoTabs">
 
       <nxu:set var="contentViewId" value="0">
       <nxu:set var="contentViewName"
